--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
         This project was a hands-on introduction to PHP,&nbsp;MySQL,&nbsp;and JavaScript,&nbsp;where I dove into problem-solving and troubleshooting. The success of digitally recording attendance cemented my interest and proficiency in back-end programming.
         <br><br>Ultimately,&nbsp;these experiences have solidified my passion for innovation and my aspiration to leverage technology to build a more sustainable world. I aim to create solutions that bridge societal gaps. 
         By combining my technical expertise with my leadership skills,&nbsp;I am confident in my ability to make a meaningful difference in everyday lives.</p>
-    <img class="intro_img" src="images/profile.jpg" alt="Image">
+    <img class="intro_img" src="images/john_doe.jpg" alt="Image">
     </div>
     <div id="education" class="education">
     <p class="header">Education</p>
