--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <!-- Dark mode favicon -->
         <link rel="icon" href="images/home_dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
         <link rel="icon" type="image/png" href="images/home.png">
-        <title>Oh Kuan Qi | About</title>
+        <title>About</title>
         <link rel="stylesheet" href="style1.css">
     </head>
 
