--- a/about.html
+++ b/about.html
@@ -40,7 +40,9 @@
         <div id="personal_about3">
                 <img class="intro_img" src="images/john_doe.jpg" alt="Image">
                 <p class="start_desc">Name:&nbsp;Oh Kuan Qi<br><br>
-                Course: Bachelor of Science (Honours) in Computer Science</p>
+                Course:&nbsp;Bachelor of Science (Honours) in Computer Science<br><br>
+                School: &nbsp;Sunway University
+            </p>
         </div>
         <div id="personal_about4">
                 <img class="intro_img" src="images/john_doe.jpg" alt="Image">
