--- a/about.html
+++ b/about.html
@@ -48,10 +48,12 @@
                 <img class="intro_img" src="images/john_doe.jpg" alt="Image">
         </div>
         <div id="about" class="about">
+          <div id="about_desc">
             <p class="header">About Us</p>
             <p class="description">We are a team of 4 students pursuing a degree in computer science at Sunway University.</p>
             <p class="description">This website is dedicated to students wanting to manage their workflow more efficiently, allowing for a reduction in time needed to complete tasks.</p>
         </div>
+          </div>
         <div class="members">
             <button id="mem_button1" class="mem_button1">Daniel Lau Zhe Kai</button>
             <button id="mem_button2" class="mem_button2">Jordan Ooi Zixian</button>
