--- a/about.html
+++ b/about.html
@@ -446,7 +446,7 @@
 </div>
 </div>
   <div class="footer">
-  <p>© 2025 Oh Kuan Qi.&nbsp;All rights reserved.</p>
+  <p>Made by Computer Science Students.</p>
 </div>
         <script src="script_about.js"></script>
         <script>
