Position of footer

--- a/about.html
+++ b/about.html
@@ -446,11 +446,8 @@
 </div>
 </div>
   <div class="footer">
-  <p>Made by Computer Science Students.</p>
+  <p>Made in Sunway University.</p>
 </div>
         <script src="script_about.js"></script>
-        <script>
-
-        </script>
     </body>
 </html>
