--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Page</title>
     <link href="main-page-styles.css" rel="stylesheet">
+    <link href="spaces-side-panel-styles.css" rel="stylesheet">
     <script src="main-page.js" defer></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -42,8 +43,8 @@
     <div class="container" id="content">
         <div class="wrapper side-panel-open">
             <div class="side-nav-bar">
-                <button class="side-button" id="background">
-                    Backgrounds
+                <button class="side-button" id="Spaces">
+                    Spaces
                 </button>
                 <button class="side-button" id="">
                     Button 2
@@ -56,6 +57,7 @@
                 </button>
             </div>
             <div class="side-content-area">
+                <h1 class="side-panel-title">Featured Spaces</h1>
                 <div class="video-selection">
                     <div class="video-row">
                         <div class="video-item-container">
