--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -133,13 +133,24 @@
                 <span class="material-icons sp-icon-open">arrow_back_ios</span>
             </button>
 
-            <div class="content-area" id="Music" >
-                <h1 class="side-panel-title">Music</h1>
-                <p>Select a playlist or adjust volume.</p>
-                <!-- Add your music controls here, e.g., buttons for playlists, volume slider -->
-                <button>Play Chill Mix</button>
-                <button>Play Focus Beats</button>
-                <input type="range" min="0" max="100" value="50" id="music-volume">
+            <div class="content-area" id="Music">
+                <h1 class="side-panel-title">Sound Playlist</h1>
+                <div class="music-selection">
+                    <div class="music-row">
+                        music
+                    </div>
+                    <div class="music-row">
+                    </div>
+                    <div class="music-row">
+                        music
+                    </div>
+                    <div class="music-row">
+                        music
+                    </div>
+                    <div class="music-row">
+                        music
+                    </div>
+            </div>
             </div>
             <button class="side-panel-toggle" id="MusicToggleButton" type="button">
                 <span class="material-icons sp-icon-open">arrow_back_ios</span>
