--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -6,13 +6,16 @@
     <title>Main Page</title>
     <link href="main-page-styles.css" rel="stylesheet">
     
+    <!-- Fonts from Google -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
     </style>
-
+    <!-- CSS -->
     <link href="spaces-side-panel-styles.css" rel="stylesheet">
     <link href="music-side-panel-styles.css" rel="stylesheet">
-    <script src="main-page.js" defer></script>
+    <!-- JavaScripts -->
+    <script src="music-sidebar.js" defer></script>
+    <script src="spaces-sidebar.js" defer></script>
     <!-- Icons from Google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=volume_up" />
