--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <div class="right" id="myNav1">
     <a href="#">Calendar</a>
     <a href="#">Timetable</a>
-    <a href="about.html">About Us</a>
+    <a href="#">About Us</a>
     <a href="#">Logout</a>
     <a onclick="image()" href="#"><img id="themeIcon" src="images/bright.png"></a>
   </div>
