--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -18,7 +18,7 @@
     <script src="spaces-sidebar.js" defer></script>
     <!-- Icons from Google -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=volume_up" />
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 </head>
 <body>
     <video autoplay muted loop class="background-video">
@@ -35,19 +35,34 @@
         </div>
         <div class="right-column">
             <a href="#" class="navigation" >
-            Calender
+                <span class="material-symbols-outlined">
+                    today
+                </span>
+            <div class="nav-description">Cal</div>
             </a>
             <a href="#" class="navigation">
-            Timetable
+                <span class="material-symbols-outlined">
+                    schedule
+                </span>
+                <div class="nav-description">Timetable</div>
             </a>
             <a href="#" class="navigation">
-            About Us
+                <span class="material-symbols-outlined">
+                    emoji_people
+                </span>
+            <div class="nav-description">About Us</div>
             </a>
             <a href="#" class="navigation">
-            Logout
+                <span class="material-symbols-outlined">
+                    logout
+                 </span>
+            <div class="nav-description">Log Out</div>
             </a>
             <a href="#" class="navigation">
-            Sun image
+                <span class="material-symbols-outlined">
+                    sunny
+                </span>
+            <div class="nav-description">Light</div>
             </a>
         </div>
     </div>
@@ -57,16 +72,20 @@
 
             <div class="side-nav-bar">
                 <button class="side-button" id="Spaces">
-                    Spaces
+                    <span class="material-symbols-outlined">globe</span>
+                    <div class="nav-description">Spaces</div>
                 </button>
                 <button class="side-button" id="Sounds">
-                    Sounds
+                    <span class="material-symbols-outlined">volume_up</span>
+                    <div class="nav-description">Sounds</div>
                 </button>
                 <button class="side-button" id="">
-                    Button 3
+                    <span class="material-symbols-outlined">timer</span>
+                    <div class="nav-description">Timer</div>
                 </button>
                 <button class="side-button" id="">
-                    Button 4
+                    <span class="material-symbols-outlined">notes</span>
+                    <div class="nav-description">Notes</div>
                 </button>
             </div>
 
