Major structure updates for right side div

--- a/about1.html
+++ b/about1.html
@@ -55,6 +55,26 @@
                         This project was a hands-on introduction to PHP,&nbsp;MySQL,&nbsp;and JavaScript,&nbsp;where I dove into problem-solving and troubleshooting. The success of digitally recording attendance cemented my interest and proficiency in back-end programming.
                         <br><br>Ultimately,&nbsp;these experiences have solidified my passion for innovation and my aspiration to leverage technology to build a more sustainable world. I aim to create solutions that bridge societal gaps. 
                         By combining my technical expertise with my leadership skills,&nbsp;I am confident in my ability to make a meaningful difference in everyday lives.</p>
+                            <div id="education" class="education">
+                                <p class="header">Education</p>
+                                <div id="grid-container1" class="grid-container1">
+                                    <div id="box1" class="box1">
+                                        <p id="desc1" class="desc1">Cambridge A-Level</p>
+                                        <p id="desc1" class="desc1">Taylor's College,&nbsp;Malaysia&nbsp;
+                                        <p id="desc1" class="desc1">2022&nbsp;-&nbsp;2023</p>
+                                    </div>
+                                    <div id="box2" class="box2">
+                                        <p id="desc1" class="desc1">Bachelor of Science (Honours) in Computer Science</p>
+                                        <p id="desc1" class="desc1">Sunway University,&nbsp;Malaysia</p>
+                                        <p id="desc1" class="desc1">2025&nbsp;-&nbsp;present</p>
+                                    </div>
+                                    <div id="box3" class="box3">
+                                        <p id="desc1" class="desc1">IELTS</p>
+                                        <p id="desc1" class="desc1">British Council,&nbsp;Malaysia</p>
+                                        <p id="desc1" class="desc1">2023</p>
+                                    </div>
+                                </div>
+                            </div>
                     </div>
                 </div>
             </div> 
