Dark mode completed

--- a/about1.html
+++ b/about1.html
@@ -19,7 +19,7 @@
                     <a href="#">Timetable</a>
                     <a href="#">About Us</a>
                     <a href="#">Logout</a>
-                    <a onclick="image()" href="#"><img id="themeIcon" src="images/bright.png"></a>
+                    <a id="darkModeToggle" href="#"><img id="themeIcon" src="images/bright.png"></a>
                 </div>
         </div>
             <div id="container">
