--- a/todo/index.html
+++ b/todo/index.html
@@ -13,7 +13,7 @@
 			<ul id="left-navbar" class="left-navbar">
 				<a href="javascript:update_current_list('1')" class="list-item">
 					<li id="list1_nav_title">Not Started</li>
-					<p id="list1_num" class="tasks-num">0</p>
+					<p id="1_num" class="tasks-num">0</p>
 				</a>
 				<a id="add-list-item" href="javascript:create_new_nav_option()" class="list-item">
 				<li>
