icon changes and colours

--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -25,15 +25,11 @@
         <source src="https://cdn.pixabay.com/video/2024/02/25/201947-916877801_tiny.mp4">
     </video>
     <div class="navigation-bar">
-        <div class="left-column">
-            <button class="container">
-            Test 1
-            </button>
-            <button class="container">
-            Test 2
-            </button>
-        </div>
         <div class="right-column">
+            <a href="#" class="navigation">
+                <span class="material-symbols-outlined">notes</span>
+                <div class="nav-description">Notes</div>
+            </a>
             <a href="#" class="navigation" >
                 <span class="material-symbols-outlined">
                     today
@@ -84,8 +80,9 @@
                     <div class="nav-description">Timer</div>
                 </button>
                 <button class="side-button" id="">
-                    <span class="material-symbols-outlined">notes</span>
-                    <div class="nav-description">Notes</div>
+                    <span class="material-symbols-outlined">
+                        heart_plus</span>                   
+                    <div class="nav-description">Motivation</div>
                 </button>
             </div>
 
