--- a/todo/index.html
+++ b/todo/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
-<html>
+<html data-theme="dark">
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="./index.css"/>
 		<script src="./index.js"/ defer></script>
 		<style>
-		@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 		</style>
+		<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body>
 		<nav class="left-nav">
@@ -30,6 +32,18 @@
 				</li>
 				</a>
 			</ul>
+			<a href="/Web1201/login/login.html"class="logout">
+			<span class="material-symbols-outlined">
+			    logout
+			 </span>
+			 Logout
+			</a>
+			<div class="profile">
+				<a href="#">
+					<img src="../images/john_doe.jpg">
+					<p>Admin</p>
+				</a>
+			</div>
 		</nav>
 		<div class="main-container">
 			<textarea placeholder="LIST NAME" maxlength="30" class="title" id="title"></textarea>
@@ -37,6 +51,14 @@
 				<div class="plus_more" id="plus_symbol">
 						<svg  role="graphics-symbol" viewBox="0 0 16 16" class="plus-symbol" style="width:50px; fill: rgb(127, 127, 127); flex-shrink: 0;"><path d="M7.977 14.963c.407 0 .747-.324.747-.723V8.72h5.362c.399 0 .74-.34.74-.747a.746.746 0 00-.74-.738H8.724V1.706c0-.398-.34-.722-.747-.722a.732.732 0 00-.739.722v5.529h-5.37a.746.746 0 00-.74.738c0 .407.341.747.74.747h5.37v5.52c0 .399.332.723.739.723z"></svg></path>
 				</div>
+				<nav class="right-nav">
+					<ul class="right-ul">
+						<li><a class="right-ul-li" href="/Web1201/main-page/main-page.html"><span class="material-symbols-outlined">home</span>Home</a></li>
+						<li><a class="right-ul-li"href="#"><span class="material-symbols-outlined">today</span>Calendar</a></li>
+						<li><a class="right-ul-li" href="/Web1201/about.html"><span class="material-symbols-outlined">emoji_people</span>About Us</a></li>
+						<li><a id="theme-toggle" class="right-ul-li" href="javascript:change_theme()"><span class="material-symbols-outlined">light_mode</span>Theme</a></li>
+					</ul>
+				</nav>
 			</div>
 	</body>
 
