--- a/todo/index.html
+++ b/todo/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<nav class="left-nav">
-			<p class="tasks-text">LISTS</p>
+			<p class="tasks-text">MENU</p>
 			<ul id="left-navbar" class="left-navbar">
 				<a list="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82" href="javascript:update_current_list('35fd7e4c-5e49-4b36-8d81-f9da7b66bc82')" class="list-item" >
 					<li id="35fd7e4c-5e49-4b36-8d81-f9da7b66bc82_nav_title">LIST</li>
@@ -46,7 +46,7 @@
 			</div>
 		</nav>
 		<div class="main-container">
-			<textarea placeholder="LIST NAME" maxlength="30" class="title" id="title"></textarea>
+			<textarea wrap="off" placeholder="LIST NAME" maxlength="30" class="title" id="title"></textarea>
 			<div class="notes_container" id="notes_container">
 				<div class="plus_more" id="plus_symbol">
 						<svg  role="graphics-symbol" viewBox="0 0 16 16" class="plus-symbol" style="width:50px; fill: rgb(127, 127, 127); flex-shrink: 0;"><path d="M7.977 14.963c.407 0 .747-.324.747-.723V8.72h5.362c.399 0 .74-.34.74-.747a.746.746 0 00-.74-.738H8.724V1.706c0-.398-.34-.722-.747-.722a.732.732 0 00-.739.722v5.529h-5.37a.746.746 0 00-.74.738c0 .407.341.747.74.747h5.37v5.52c0 .399.332.723.739.723z"></svg></path>
