--- a/todo/index.html
+++ b/todo/index.html
@@ -21,17 +21,16 @@
 						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 640 640" style="" xml:space="preserve"><path fill="rgb(225 94 106)" d="M183.1 137.4C170.6 124.9 150.3 124.9 137.8 137.4C125.3 149.9 125.3 170.2 137.8 182.7L275.2 320L137.9 457.4C125.4 469.9 125.4 490.2 137.9 502.7C150.4 515.2 170.7 515.2 183.2 502.7L320.5 365.3L457.9 502.6C470.4 515.1 490.7 515.1 503.2 502.6C515.7 490.1 515.7 469.8 503.2 457.3L365.8 320L503.1 182.6C515.6 170.1 515.6 149.8 503.1 137.3C490.6 124.8 470.3 124.8 457.8 137.3L320.5 274.7L183.1 137.4z"></path></svg>
 					</div>
 				</a>
-				<a id="add-list-item" href="javascript:create_new_nav_option()" class="list-item">
-				<li>
+			</ul>
+			<hr>
+			<a id="add-list-item" href="javascript:create_new_nav_option()" class="add-list">
 				<div id="new-list" class="new-list">
-				    <svg viewBox="0 0 16 16" class="plus-symbol" style="width:30px;height:14px; display:flex; fill: rgb(127,127,127);">
+				    <svg viewBox="0 0 16 16" class="plus-symbol" style="width:30px;height:14px; display:flex; fill: rgb(255,255,255);">
 					<path d="M7.977 14.963c.407 0 .747-.324.747-.723V8.72h5.362c.399 0 .74-.34.74-.747a.746.746 0 00-.74-.738H8.724V1.706c0-.398-.34-.722-.747-.722a.732.732 0 00-.739.722v5.529h-5.37a.746.746 0 00-.74.738c0 .407.341.747.74.747h5.37v5.52c0 .399.332.723.739.723z"></path>
 				    </svg>
 				    <p>Add New List</p>
 				</div>
-				</li>
-				</a>
-			</ul>
+			</a>
 			<a href="/Web1201/login/login.html"class="logout">
 			<span class="material-symbols-outlined">
 			    logout
