--- a/main-page/main-page.html
+++ b/main-page/main-page.html
@@ -31,6 +31,12 @@
                 <div class="nav-description">Notes</div>
             </a>
             <a href="#" class="navigation" >
+            <span class="material-symbols-outlined">
+                checklist
+            </span>
+            <div class="nav-description">To Do List</div>
+            </a>
+            <a href="#" class="navigation" >
                 <span class="material-symbols-outlined">
                     today
                 </span>
